Closed Bug 1751576 Opened 2 years ago Closed 2 years ago

Crash when downloading a newsgroup for offline use

Categories

(MailNews Core :: Networking: NNTP, defect)

Thunderbird 97
defect

Tracking

(thunderbird_esr91 unaffected, thunderbird97 wontfix)

VERIFIED FIXED
98 Branch
Tracking Status
thunderbird_esr91 --- unaffected
thunderbird97 --- wontfix

People

(Reporter: infofrommozilla, Assigned: rnons)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

STR:
On a newsgroup open the context menu:
-> Properties -> /Synchronization
=> [X] Select this newsgroup for offline use
=> [Download Now]

TB crashes if there are new articles to download and "Download Now" is clicked.
bp-dda05fcd-e847-470a-8e02-2e6d21220122

It works fine with mailnews.nntp.jsmodule set to false

TB95.3b is fine
TB97.2b also crashes with jsmodule enabled.
bp-11650a5f-0aa2-4d0b-9a19-d1c7f1220122

Crash Signature: @ nsXPCWrappedJS::CleanupOutparams
Regressed by: nntp-js
Crash Signature: @ nsXPCWrappedJS::CleanupOutparams → @nsXPCWrappedJS::CleanupOutparams
Crash Signature: @nsXPCWrappedJS::CleanupOutparams → nsXPCWrappedJS::CleanupOutparams
Crash Signature: nsXPCWrappedJS::CleanupOutparams → [@ nsXPCWrappedJS::CleanupOutparams ]

corrected links...

(In reply to Alfred Peters from comment #0)

bp-dda05fcd-e847-470a-8e02-2e6d21220122

0 VCRUNTIME140.dll memset ?:
1 xul.dll nsXPCWrappedJS::CleanupOutparams /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedJSClass.cpp:591
2 xul.dll nsXPCWrappedJS::GetInterfaceTypeFromParam /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedJSClass.cpp:518
3 xul.dll truncf ?:
4 xul.dll truncf ?:
5 xul.dll nsXPCWrappedJS::CallMethod /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedJSClass.cpp:954
6 xul.dll truncf ?:
7 xul.dll truncf ?:
8 xul.dll truncf ?:
9 xul.dll nsIXPConnect::XPConnect /builds/worker/checkouts/gecko/js/xpconnect/src/nsXPConnect.cpp:932
10 xul.dll nsXPCWrappedJS::Release /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedJS.cpp:296

It works fine with mailnews.nntp.jsmodule set to false> TB97.2b also crashes with jsmodule enabled.
bp-11650a5f-0aa2-4d0b-9a19-d1c7f1220122

A newsgroup that has articles available to download crashes for me
https://crash-stats.thunderbird.net/report/bp-f6ae085f-ac11-4290-b6e8-54d0e1220123
0 libsystem_platform.dylib _platform_memset ?:
1 XUL nsXPCWrappedJS::CleanupOutparams comm-beta:js/xpconnect/src/XPCWrappedJSClass.cpp:32e7090908f3ab87553db770d39642191ad59cc3:591
2 XUL nsXPCWrappedJS::CallMethod comm-beta:js/xpconnect/src/XPCWrappedJSClass.cpp:32e7090908f3ab87553db770d39642191ad59cc3:954
3 XUL PrepareAndDispatch xptcall/md/unix/xptcstubs_aarch64.cpp:32e7090908f3ab87553db770d39642191ad59cc3:190
4 XUL SharedStub ?:
5 XUL nsMsgNewsFolder::DownloadAllForOffline mailnews/news/src/nsNewsFolder.cpp:32e7090908f3ab87553db770d39642191ad59cc3:1443
6 XUL nsMsgNewsFolder::DownloadAllForOffline mailnews/news/src/nsNewsFolder.cpp:32e7090908f3ab87553db770d39642191ad59cc3:1443
7 XUL _NS_InvokeByIndex ?:

But a newsgroup that has no articles available does not crash for me. But I do see

Uncaught
Exception { name: "NS_ERROR_FAILURE", message: "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgFolder.downloadAllForOffline]", result: 2147500037, filename: "chrome://messenger/content/folderProps.js", lineNumber: 452, columnNumber: 0, data: null, stack: "onOfflineFolderDownload@chrome://messenger/content/folderProps.js:452:14\noncommand@chrome://messenger/content/folderProps.xhtml:1:1\neditFolder@chrome://messenger/content/folderPane.js:3430:12\noncommand@chrome://messenger/content/messenger.xhtml:1:23\n", location: XPCWrappedNative_NoHelper }

columnNumber: 0

data: null

filename: "chrome://messenger/content/folderProps.js"

lineNumber: 452

location: XPCWrappedNative_NoHelper { QueryInterface: QueryInterface(), filename: Getter, name: Getter, … }

message: "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgFolder.downloadAllForOffline]"

name: "NS_ERROR_FAILURE"

result: 2147500037

stack: "onOfflineFolderDownload@chrome://messenger/content/folderProps.js:452:14\noncommand@chrome://messenger/content/folderProps.xhtml:1:1\neditFolder@chrome://messenger/content/folderPane.js:3430:12\noncommand@chrome://messenger/content/messenger.xhtml:1:23\n"

<prototype>: ExceptionPrototype { toString: toString(), name: Getter, message: Getter, … }
folderProps.js:452

Flags: needinfo?(remotenonsense)
Keywords: crash

(In reply to Wayne Mery (:wsmwk) from comment #1)

corrected links...

Thanks, pasting the crash ID used to do the trick. I think. 🙄

But now you have both times linked to the same report.

(In reply to Alfred Peters from comment #0)

TB 98.0a1:

bp-dda05fcd-e847-470a-8e02-2e6d21220122

TB 97.0b2

bp-11650a5f-0aa2-4d0b-9a19-d1c7f1220122

Severity: -- → S3
Keywords: regression
  • crash is due to using nullptr to accept return value from JS function
  • move notifyDownloadedLine into NntpClient to save offline
Assignee: nobody → remotenonsense
Status: NEW → ASSIGNED
Flags: needinfo?(remotenonsense)
Target Milestone: --- → 98 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/b20ca145cf12
Fix crash when downloading newsgroup for offline use. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/5febb71b233a
follow-up - fix linting. rs=eslint DONTBUILD
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: