Bug 1751576 - Fix crash when downloading newsgroup for offline use. r=mkmelin

- crash is due to using nullptr to accept return value from JS function
- move notifyDownloadedLine into NntpClient to save offline

Differential Revision: https://phabricator.services.mozilla.com/D136710

--HG--
extra : amend_source : fc0f7ab1cdd3cfc7b8af5995af5216083000fd69